--- a/BIOGRAFI PRIBADI.html
+++ b/BIOGRAFI PRIBADI.html
@@ -4,7 +4,7 @@
 	<title>BIOGRAFI PRIBADI</title>
 </head>
 <body>
-	<h1 align="center">BIOGRAFI PRIBADI</h1>
+	<h1 align="center">BIOGRAFI PRIBADI SAYA</h1>
 	<table align="center" border="10" cellpadding="10">
 		<tr><td colspan="100"></td>
 		<tr>
